Continued to add to the word net, make it wider

--- a/teambs/the_wordnet_blue_sky_idea.ipynb
+++ b/teambs/the_wordnet_blue_sky_idea.ipynb
@@ -15,11 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3.6.3 |Anaconda, Inc.| (default, Oct 13 2017, 12:02:49) \n[GCC 7.2.0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['whats', 'difference', 'jew', 'nazi', 'germany', 'pizza']\n                                                body      id  score  \\\n0                       say leroy please paint fence  5tz52q      1   \n1              pizza doesnt scream put oven im sorry  5tz4dd      0   \n2  really helped learn american culture visited s...  5tz319      0   \n3  sunday school teacher concerned students might...  5tz2wj      1   \n4          got caught trying sell two books freshman  5tz1pc      0   \n\n                                               title  \n0             hate cant even say black paint anymore  \n1            whats difference jew nazi germany pizza  \n2                              recently went america  \n3                  brian raises hand says hes heaven  \n4  hear university book store worker charged stea...  \n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print ( sys.version, file=sys.stderr )\n",
@@ -121,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "for title_words, body_words in zip(title_word_list, body_word_list :\n",
+    "for title_words, body_words in zip(title_word_list, body_word_list) :\n",
     "    body_synset = make_synset_from_word_list(body_words)\n",
     "    title_synset = make_synset_from_word_list(title_words)\n",
     "    similarity_list = list()\n",
@@ -136,34 +151,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'WordNetCorpusReader' object has no attribute 'Synset'",
-     "output_type": "error",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'nltk.corpus.reader.wordnet.Synset'>\nThere are 0 items in set s (should be 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<class 'nltk.corpus.reader.wordnet.Synset'>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'set'",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-36908e7639cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorpus\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwordnet\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msyns\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mwn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynsets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dog'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msyns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSynset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Type of syns is %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msyns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msyns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mset\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'WordNetCorpusReader' object has no attribute 'Synset'"
-     ]
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-7018be445c93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mset\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"There are %d items in set s (should be 0)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"Q\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"R\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Set s contains %s, should be Q, R \"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m^=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"W\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"T\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"R\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'set'"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
     "from nltk.corpus import wordnet as wn\n",
-    "syns =wn.synsets('dog') \n",
-    "assert isinstance(syns, wn.Synset),\"Type of syns is %s\" % type(syns)\n",
+    "import nltk\n",
+    "import sys\n",
+    "syns =wn.synsets('dog')\n",
+    "print(type(syns[0]), file=sys.stderr)\n",
+    "assert isinstance(syns[0], nltk.corpus.reader.wordnet.Synset),\"Type of syns is %s\" % \\\n",
+    "                                                    type(syns)\n",
     "print(type(syns[0]))\n",
     "s:set =set()\n",
     "print(\"There are %d items in set s (should be 0)\" % len(s))\n",
-    "s.add(\"Q\", \"R\")\n",
+    "s |= {\"Q\", \"R\"}\n",
     "print(\"Set s contains %s, should be Q, R \" % str(s) )\n",
+    "# Update the set, keeping only elements found in either set, but not in both.\n",
     "s ^= {\"W\", \"T\", \"R\"}\n",
-    "print(\"Set s contains %s, should be Q, R, T, W\" % str(s) )\n",
-    "s |= {\"W\", \"p\"}\n",
-    "print(\"Set s contains %s, should be Q R, T, W, p \"% str(s) )\n"
+    "print(\"Set s contains %s, should be Q, T, W\" % str(s) )\n",
+    "# Intersection\n",
+    "s &= {\"W\", \"p\"}\n",
+    "print(\"Set s contains %s, should be W \"% str(s) )\n"
    ]
   },
   {
